--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@ TODO - fix F keys on OS X
 	 - fix _print_line of multiline class
 	- Drop down menus?
 
+2.0pre26
+	Include documentation in Tarball.
 
 2.0pre25 
 	Bug fixes.
