--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+KNOWN BUGS:
+    - Only part of the UI can handle Unicode.
+    - The cursor movement on the editmultiline text field is buggy.
+    
+
+
 TODO - fix F keys on OS X
 	 - fix _print_line of multiline class
 	- Drop down menus?
