--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,9 @@ TODO - fix F keys on OS X
 		robust)
 	- should monthbox calendar also accept utf-8 for day names?
 
+2.0pre58
+Changes to some color themes - mostly to revert default behaviour to
+a more conservative set of choices.
 
 2.0pre57
 fix color support. Light colored terminals now possible. Text widgets have
