--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,10 @@ TODO - fix F keys on OS X
 		robust)
 	- should monthbox calendar also accept utf-8 for day names?
 
+
+2.0pre60
+Documentation updates and some user-requested enhancement.
+
 2.0pre59
 Improved support for writing complex, mutt- and irssi-like applications.
 
