--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,11 @@ TODO - fix F keys on OS X
 	- should monthbox calendar also accept utf-8 for day names?
 
 
+2.0pre69
+MutliLineTreeNew and related classes tidied up in response to bug report.  
+Slight API changes, noted in documentation.
+
+
 2.0pre68
 Setting a form's .editing attribute to False will now cause the edit loop of a widget 
 to exit immediately.
